--- a/public/admin.html
+++ b/public/admin.html
@@ -105,7 +105,7 @@
             }
         }
     </style>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 </head>
 
 <body>
