chore: Update Socket.IO library to version 4.7.5 in admin.html and leaderboard.html

--- a/public/admin.html
+++ b/public/admin.html
@@ -131,7 +131,9 @@
     </div>
 
     <script>
-        const socket = io();
+        const socket = io('https://your-vercel-domain.vercel.app', {
+            transports: ['websocket', 'polling']
+        });
 
         document.getElementById('startTest').addEventListener('click', () => {
             const duration = document.getElementById('testDuration').value;
