chore: Update Socket.IO library to version 4.7.5 in admin.html and leaderboard.html

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -141,7 +141,7 @@
 
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script>
-        const socket = io('https://your-vercel-domain.vercel.app', {
+        const socket = io('https://redlabz-typing.vercel.app', {
             transports: ['websocket', 'polling']
         });
 
