--- a/public/admin.html
+++ b/public/admin.html
@@ -131,7 +131,7 @@
     </div>
 
     <script>
-        const socket = io('https://your-vercel-domain.vercel.app', {
+        const socket = io('https://redlabz-typing.vercel.app', {
             transports: ['websocket', 'polling']
         });
 
