chore: Update package.json and package-lock.json
This commit adds the "cors" dependency to the package.json and package-lock.json files. The new version of "cors" is "^2.8.5". This update is necessary to improve the application's cross-origin resource sharing capabilities.

Note: The recent user commits and repository commits did not provide any additional relevant information for the commit message.

--- a/public/admin.html
+++ b/public/admin.html
@@ -132,7 +132,8 @@
 
     <script>
         const socket = io('https://redlabz-typing.vercel.app', {
-            transports: ['websocket', 'polling']
+            transports: ['polling'],
+            upgrade: false
         });
 
         document.getElementById('startTest').addEventListener('click', () => {
