--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -142,7 +142,8 @@
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script>
         const socket = io('https://redlabz-typing.vercel.app', {
-            transports: ['websocket', 'polling']
+            transports: ['polling'],
+            upgrade: false
         });
 
         function updateLeaderboardTable(leaderboardData) {
