--- a/public/admin.html
+++ b/public/admin.html
@@ -105,7 +105,7 @@
             }
         }
     </style>
-    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -131,10 +131,7 @@
     </div>
 
     <script>
-        const socket = io('https://redlabz-typing.vercel.app', {
-            transports: ['polling'],
-            upgrade: false
-        });
+        const socket = io();
 
         document.getElementById('startTest').addEventListener('click', () => {
             const duration = document.getElementById('testDuration').value;
